# persistence-administrator

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac
Administrator/: Makefile.am
Administrator/config/: pas-daemon.service.in
Administrator/dbus_config/: org.genivi.persistence.admin_svc.conf
Administrator/doc/: AutoTools HowTo.docx
Administrator/inc/private/: ssw_pers_admin_access_lib.h  ssw_pers_admin_common.h  ssw_pers_admin_config.h  ssw_pers_admin_database_helper.h  ssw_pers_admin_dbus.h  ssw_pers_admin_files_helper.h  ssw_pers_admin_pcl.h  ssw_pers_admin_service.h
Administrator/inc/public/: persistence_admin_service.h
Administrator/pkgconfig/: libpersadminaccess.pc.in
Administrator/src/: ssw_pers_admin_access_lib.c  ssw_pers_admin_backup.c  ssw_pers_admin_common.c  ssw_pers_admin_config.c  ssw_pers_admin_data_export.c  ssw_pers_admin_data_import.c  ssw_pers_admin_database_helper.c  ssw_pers_admin_dbus.c  ssw_pers_admin_files_helper.c  ssw_pers_admin_pcl.c  ssw_pers_admin_recovery.c  ssw_pers_admin_resource_config_add.c  ssw_pers_admin_restore_default.c  ssw_pers_admin_service.c  ssw_pers_admin_user_delete_data.c
test/pers_svc_test/: Makefile.am  test_info
test/pers_svc_test/dbus_specifications/: OIPModuleTestPASCodeGeneration.txt  OIPModuleTestPASCodeGeneration.xml  OIPModuleTestPASDBusCall.txt
test/pers_svc_test/inc/: test_PAS.h  test_pas_check_data_after_backup_application.h  test_pas_check_data_after_backup_create_all.h  test_pas_check_data_after_backup_user2_seat_all.h  test_pas_check_data_after_backup_user_all.h  test_pas_check_data_after_delete_user2_data.h  test_pas_check_data_after_reset.h  test_pas_data_backup_recovery.h  test_pas_data_import.h  test_pas_data_restore_default.h  test_pas_resource_config_add.h
test/pers_svc_test/src/: test_PAS.c  test_PAS_dbus.c  test_pas_check_data_after_backup_application.c  test_pas_check_data_after_backup_create_all.c  test_pas_check_data_after_backup_user2_seat_all.c  test_pas_check_data_after_backup_user_all.c  test_pas_check_data_after_delete_user2_data.c  test_pas_check_data_after_reset.c  test_pas_import_all.c  test_pas_import_app.c  test_pas_import_source_content.c  test_pas_import_user.c  test_pas_recovery_All.c  test_pas_recovery_AllInitialContent.c  test_pas_recovery_App1.c  test_pas_recovery_App1InitialContent.c  test_pas_recovery_User1.c  test_pas_recovery_User1InitialContent.c  test_pas_recovery_User2Seat1InitialContent.c  test_pas_recovery_Users.c  test_pas_recovery_backup_content.c  test_pas_resource_config_add.c  test_pas_restore_default_All.c  test_pas_restore_default_App1.c  test_pas_restore_default_User1.c  test_pas_restore_default_User2App1.c  test_pas_restore_default_User2Seat1.c
test/persadmin_tool/: Makefile.am
test/persadmin_tool/src/: persadmin_tool.c
